2012-10-03  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt] Enable mock scrollbars
        https://bugs.webkit.org/show_bug.cgi?id=98011

        Reviewed by Csaba Osztrogonác.

        Enable mock scrollbars for the Qt port. This patch will require a huge rebaseline.

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::DumpRenderTree):
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::resetStateToConsistentValues):

2012-10-03  Alberto Garcia  <agarcia@igalia.com>

        [GTK] [WK2] Add favicon support to the MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=98063

        Reviewed by Carlos Garcia Campos.

        Set the icon in the URI text entry using the favicon property of
        the WebKitWebView.

        * MiniBrowser/gtk/BrowserWindow.c:
        (_BrowserWindow):
        (updateUriEntryIcon):
        (uriEntryTextChanged):
        (faviconChanged):
        (browserWindowFinalize):
        (browser_window_init):
        (browserWindowConstructed):

2012-10-03  Raphael Kubo da Costa  <raphael.kubo.da.costa@intel.com>

        [Qt][DRT] Add support for overriding the "WebKitDisplayImagesKey" preference.
        https://bugs.webkit.org/show_bug.cgi?id=98200

        Reviewed by Csaba Osztrogonác.

        * DumpRenderTree/qt/TestRunnerQt.cpp:
        (TestRunner::overridePreference):

2012-10-03  Zoltan Arvai  <zarvai@inf.u-szeged.hu>

        [Qt][WRT] Fix build error with MSVC on Windows.
        https://bugs.webkit.org/show_bug.cgi?id=97697

        Reviewed by Simon Hausmann.

        WTR build is failing when WebKit directory is located on a longer path.
        This seems to caused by source files that has the same name in
        WTR and DRT directories. The solution is removing referencies 
        from Target.pri to DRT directory and adding an alternate version of
        the required files to WTR. Those files simply include the real ones from DRT.
